[package]
name = "chap01"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2021"

license = "MIT/Apache-2.0"
readme = "README.MD"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
crossbeam = "0.8.2"
typenum = "1.15.0"
